# LeJeuDesImages

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  README_DESIGN_CHANGES.md  README_NEW_GAME_MODES.md  README_RESPONSIVE_CHANGES.md  app.py  babel.cfg  config.example.yaml  config.yaml  docker-compose.yml  implementation_plan.md  infolegale_team.csv  infolegale_team_bckp_lucca.csv  infolegale_team_bckp_onboarding.csv  new_recording.py  package.json  pyproject.toml  requirements.txt  roadmap.md  task.md  test_animations.html  walkthrough.md
.claude/: settings.json
.github/: dependabot.yml
Markdown/: easter_egg.md  idees.md
demo/: team.csv
docs/: data-format.md
models/: age_mode.py  arr_mode.py  card_game_mode.py  clue_mode.py  config.py  dataset.py  dataset_registry.py  emoji_challenge_mode.py  employee.py  example_mode.py  game.py  game_mode.py  manager_mode.py  memory_mode.py  mirror_mode.py  missing_person_mode.py  pixelation_mode.py  position_match_mode.py  progressive_hint_mode.py  quiz_mode.py  score.py  scrambled_face_mode.py  seniority_mode.py  silhouette_mode.py  speed_mode.py  team_guess_mode.py  team_mode.py  timed_mode.py  zoom_mode.py
recordings/: new_recording_rec.py
routes/: admin_routes.py  card_game_routes.py  game_routes.py
scraping/: generate_infolegale_team.py  infolegale_csv_exporter.py  infolegale_scraper.py  infolegale_team.csv
static/: animations.css  animations.js  app-shell.css  bouncing-images.js  design-tokens.css  fireworks-bg.js  fireworks-responsive.js  game-alpine.js  game-engine.js  gameplay.css  homepage.css  homepage.js  legacy-theme.css  legacy-theme.js  mode-previews.css  mode-selection.css  music-player.css  music-player.js  normal-mode.css  normal-mode.js  page-content.css  particles-init.js  result-effects.js  score-section-loader.js  score-section.css  score-section.js  scripts.js  setup.css  styles.css  test.js
templates/: _mode_preview.html  _particles_bg.html  _particles_scripts.html  _switchers.html  about.html  age.html  arr.html  arr_mode.html  base.html  base_game.html  base_page.html  card_game.html  clue.html  emoji_challenge.html  employee_edit.html  employees_list.html  example.html  how_to_play.html  index.html  manager.html  memory.html  mirror.html  missing_person.html  mode_selection.html  normal.html  pixelation.html  position_match.html  progressive_hint.html  quiz.html  result.html  reverse.html  scores.html  scrambled_face.html  seniority.html  setup.html  setup_list.html  setup_login.html  setup_wizard.html  silhouette.html  speed.html  (+4 more)
tests/: conftest.py  test_admin_routes.py  test_config.py  test_dataset_branding.py  test_dataset_registry.py  test_e2e.py  test_employee.py  test_game_flow.py  test_game_mode.py  (+8 more)
(+33 files in other folders)
