[project]
name = "le-jeu-des-images"
version = "2.0.0"
description = "Team recognition game - identify your colleagues from photos"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3",
    "flask-babel>=4.0",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tinydb>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
per-file-ignores = {"tools/*" = ["E402"], "recordings/*" = ["E402"]}
